Add descriptions and change some codes.

--- a/gemma.ipynb
+++ b/gemma.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b35837d92974e1e8f6280757860bf6e",
+       "model_id": "2304f983ea794f9ea8b3b561e7dfad7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,6 +165,7 @@
     }
    ],
    "source": [
+    "#計算を早くしたい場合はGPUの使用をおすすめします。\n",
     "encoded_string = tokenizer.encode(\"I love apples.\", return_tensors= \"pt\") #encode\n",
     "output = model.generate(encoded_string, max_length = 128) #文字列をencode数値データから文章を表す新たな文字列を生成。\n",
     "print(f\"モデルの出力: {output}\")\n",
@@ -186,7 +187,7 @@
    "outputs": [],
    "source": [
     "# HuggingFaceHubでLangChain互換のモデルをHuggingFaceからモデルをダウンロードするように作ることができる。\n",
-    "llm = HuggingFaceHub(repo_id=\"google/gemma-2b-it\", model_kwargs={\"temperature\":0.8, \"max_length\":8192, \"topk\": 80}, huggingfacehub_api_token = api_key)"
+    "llm = HuggingFaceHub(repo_id=\"google/gemma-2b-it\", model_kwargs={\"temperature\":0.5, \"max_length\":8192, \"topk\": 40}, huggingfacehub_api_token = api_key)"
    ]
   },
   {
@@ -198,11 +199,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "大谷翔平って誰？\n",
+      "大谷翔平って誰の？\n",
       "\n",
-      "大谷翔平はアメリカ合衆国のカリフォルニア州に本拠するサッカークラブの「サンフレンドFC」の創設者と前監督です。また、サッカー選手として、 premier leagueのサッカークラブである「マンチェスター・ユナイテッドFC」で活躍した経験があることもあります。\n",
+      "大谷翔平は、日本の政治家・政治学者。自由民主党所属。\n",
       "\n",
-      "彼は、サッカー選手のキャリアを成功させ、サッカー選手のキャリアを成功させ、サッカー選手のキャリアを成功させ、サッカー選手のキャリアを成功させ、サッカー選手のキャリアを\n"
+      "彼は、日本の政治における重要な役割を果たしている人物として有名です。\n"
      ]
     }
    ],
@@ -266,7 +267,7 @@
       "\n",
       "Question: 大谷翔平って誰, どこのチーム?\n",
       "Answer: \n",
-      "大谷翔平は、岩手県水沢市の出身で、MLBのロサンゼルス・ドジャース所属のプロ野球選手である。\n"
+      "大谷翔平は、岩手県水沢市出身のプロ野球選手（投手、指名打者、外野手）。MLBのロサンゼルス・ドジャース所属。\n"
      ]
     }
    ],
@@ -316,7 +317,8 @@
    "source": [
     "print(cosine_similarity_with_two_words(\"回転焼き\", \"大判焼き\", embedder))\n",
     "\n",
-    "# 大判焼きと回転焼きは非常によく似ていることがわかる。"
+    "# 大判焼きと回転焼きは非常によく似ていることがわかる。\n",
+    "#他の単語でもやってみましょう。もし似ているはずの単語なのに類似度が低い場合、学習時のコーパスに無いなどの問題が起こっている可能性があります。"
    ]
   },
   {
@@ -429,8 +431,17 @@
    "source": [
     "# requests ライブラリとBeautifulSoupを用いてLinuxの情報を含んだテキストデータベースを制作する。\n",
     "# <p>タグに多く情報があるのでそれを用いる\n",
-    "response = requests.get(\"https://ja.wikipedia.org/wiki/Linux\")\n",
-    "html = BeautifulSoup(response.content)\n",
+    "url = \"https://ja.wikipedia.org/w/api.php\"\n",
+    "params = {\n",
+    "    \"action\" : \"parse\",\n",
+    "    \"page\" : \"Linux\",\n",
+    "    \"format\" : \"json\",\n",
+    "    \"prop\" : \"text\",\n",
+    "}\n",
+    "response = requests.get(url=url, params=params)\n",
+    "content: dict = response.json()\n",
+    "html_content = content[\"parse\"][\"text\"][\"*\"]\n",
+    "html = BeautifulSoup(html_content)\n",
     "articles = []\n",
     "for article in html.find_all(\"p\"):\n",
     "    articles.append(article.text)"
@@ -447,13 +458,11 @@
      "text": [
       "Linuxのペンギンのあの名前は?\n",
       "\n",
-      "ペンギンの名前は、いくつかの異なる由来があると考えられています。\n",
+      "ペンギンの名前は、ペンギンのような形をした物体や、ペンギンのような動作をするものに対する名前の由来と考えられます。\n",
       "\n",
-      "* ** Japanese「ペンギ」**は、ペンや筆のようなツールの名称の由来です。\n",
-      "* ** Middle English「penge'''**は、ペンや筆の意図的な名前の由来です。\n",
-      "* ** Old French「pendre」**は、ペンや筆のようなツールの意図的な名前の由来です。\n",
+      "ペンギンの名前は、日本語では「ペンギンの名前」や「ペンギンのようなもの」と翻訳されます。\n",
       "\n",
-      "これらの名前は、ペンギンの起源と機能に基づいて\n"
+      "ペンギンの名前は、日本語では「ペンギンの名前」と翻訳されます。\n"
      ]
     }
    ],
@@ -490,8 +499,7 @@
       "\n",
       "Question: Linuxのあのペンギンの名前は?\n",
       "Answer: \n",
-      "*リーナス・トーバルズ\n",
-      "*タスマニアデビルのTuz\n"
+      "タックス (Tux)\n"
      ]
     }
    ],
@@ -548,7 +556,7 @@
       "\n",
       "\n",
       "Question: Linuxのあのペンギンの名前は?\n",
-      "Helpful Answer: The context does not specify the name of the pengin, so I cannot answer this question from the provided context.\n"
+      "Helpful Answer: The context does not provide the name of the pengin, so I cannot answer this question from the context.\n"
      ]
     }
    ],
@@ -584,8 +592,7 @@
       "Question: LinuxカーネルVersion 2.x系列登場後のマスコットの名前は?\n",
       "Helpful Answer: タックス (Tux)\n",
       "\n",
-      "\n",
-      "This question asks for the name of the mascot introduced in Linux kernel Version 2.x series after the name of Lana and Tally. The answer is **Tux**.\n"
+      "The context does not specify the name of the mascot for Linux kernel version 2.x series, so I cannot answer this question from the provided context.\n"
      ]
     }
    ],
@@ -674,10 +681,7 @@
       "\n",
       "\n",
       "Question: Linuxのあのペンギンの名前は?\n",
-      "Helpful Answer: タックス (Tux)\n",
-      "\n",
-      "\n",
-      "**Note:** The context does not specify the answer to this question, so I cannot answer this question from the provided context.\n"
+      "Helpful Answer: タックス (Tux)\n"
      ]
     }
    ],
@@ -710,7 +714,7 @@
       "\n",
       "\n",
       "Question: Linuxのライセンスは?\n",
-      "Helpful Answer: Linuxは GPL でライセンスされているため、ソースコード（加えた修正も含む）を同じ条項で入手可能にすることが要求されます。\n"
+      "Helpful Answer: Linuxは、GNU General Public License (GPL) を採用しているライセンスで、ソースコードを再頒布する者はソースコードを同じ条項で入手可能にすることが要求されます。\n"
      ]
     }
    ],
@@ -718,13 +722,6 @@
     "response = rag_llm.invoke(\"Linuxのライセンスは?\")\n",
     "print(response[\"result\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
